# telegram_bot_webhook_boilerplate

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  example.env  pyproject.toml  requirements.txt
src/tg_bot_webhook/bot/: bot.py
src/tg_bot_webhook/bot/handlers/: start_handler.py
src/tg_bot_webhook/bot/messages/: base.py  start.py
src/tg_bot_webhook/core/aiogr/: middlewares.py
src/tg_bot_webhook/core/configs/: __init__.py  common.py  database.py  logging.py  telegram.py
